--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="img/ferramentas.svg" alt="ferramentas"/>VALDEMAR <br> CONSTRUTORA
         </div>
         <div id="descricao">
-            <h1>A melhor construtora de Barra Bonita e igaraçu</h1>
+            <h1>A melhor construtora de Barra Bonita e igaraçu e macatuba</h1>
             <p>
                 Precisa construir uma casa? <br>
                 Ligue para nós.
