--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div id="botao">
                 <button >
-                 <a href="informa.html">GET IN TOUCH</a>
+                 <a href="informa.html">Desenvolvido por RICARDÃO</a>
                  </button>
             
     </div>
